# sodular-lite-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
sodular_lite/: __init__.py
sodular_lite/sodulite/: __init__.py  main.py
sodular_lite/sodulite/brow_ser/: __init__.py  main.py
sodular_lite/sodulite/brow_ser/local_storage/: __init__.py  main.py
sodular_lite/sodulite/py_thon/: __init__.py  jsonstream.py  main.py
sodular_lite/sodulite/utils/: __init__.py  index.js
sodular_lite/sodulite/utils/crud/: __init__.py  main.py
sodular_lite/sodulite/utils/http_resp/: __init__.py  main.py
sodular_lite/sodulite/utils/path/: __init__.py  main.py
sodular_lite/sodulite/utils/task/: __init__.py  index.js  main.py
sodular_lite/tests/: main.py
