[tool.poetry]
name = "sodular-lite"
version = "0.1.0"
description = ""
authors = ["coorise <team.coorise@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.publish]
#repository = "sodulite"
#username = "coorise"

